[gd_scene load_steps=15 format=3 uid="uid://b00qlr3qdf2xk"]

[ext_resource type="Texture2D" uid="uid://bqd64lwx1xt6l" path="res://assets/resources/frame2.png" id="1_4su13"]
[ext_resource type="Script" uid="uid://dbq5ssyjve4go" path="res://scenes/ui/gui/unit_panel/unit_panel.gd" id="1_mtul5"]
[ext_resource type="Texture2D" uid="uid://bmsh0s6amr1u8" path="res://assets/resources/unit_test.png" id="2_gpnjr"]
[ext_resource type="LabelSettings" uid="uid://d007hy5a7s8yl" path="res://scenes/ui/gui/unit_panel/unit_panel_label_settings.tres" id="3_gpnjr"]
[ext_resource type="Texture2D" uid="uid://yf8tb4f1enp7" path="res://assets/icons/hp.png" id="4_34sqj"]
[ext_resource type="Texture2D" uid="uid://crpoahnb8qllh" path="res://assets/icons/atk.png" id="5_mtul5"]
[ext_resource type="Texture2D" uid="uid://qlbjeegmsind" path="res://assets/icons/def.png" id="6_imqgq"]
[ext_resource type="Texture2D" uid="uid://ctvms3p4v0sqj" path="res://assets/icons/spd.png" id="7_5t18f"]
[ext_resource type="Texture2D" uid="uid://b0k22s5inl5aq" path="res://assets/icons/atk_spd.png" id="8_08odm"]
[ext_resource type="Texture2D" uid="uid://dg5r5uton3fyv" path="res://assets/icons/meele range.png" id="9_58t75"]
[ext_resource type="Texture2D" uid="uid://dfohjxxu3e02y" path="res://assets/icons/single target.png" id="10_mhg2c"]
[ext_resource type="Texture2D" uid="uid://dsmpsl6i272v3" path="res://assets/icons/inflict dmg.png" id="11_cbdtt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5t18f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_stgc1"]
atlas = ExtResource("2_gpnjr")
region = Rect2(0, 0, 800, 800)

[node name="UnitPanel" type="PanelContainer"]
custom_minimum_size = Vector2(800, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -172.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_5t18f")
script = ExtResource("1_mtul5")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_4su13")
region_rect = Rect2(0, 0, 66, 66)
patch_margin_left = 30
patch_margin_top = 10
patch_margin_right = 29
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/margin_left = 13
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 13

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="icon + name" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/icon + name"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25

[node name="UnitIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/icon + name/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("AtlasTexture_stgc1")
expand_mode = 5

[node name="character_name" type="Label" parent="MarginContainer/HBoxContainer/icon + name"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Unit name"
label_settings = ExtResource("3_gpnjr")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="statistics" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HP Container" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics"]
layout_mode = 2
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/HP Container"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Health"
texture = ExtResource("4_34sqj")
expand_mode = 5

[node name="hp_label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/HP Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 3.58
text = "300/300"
label_settings = ExtResource("3_gpnjr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Attack Container" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics"]
layout_mode = 2
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/Attack Container"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Attack Power"
texture = ExtResource("5_mtul5")
expand_mode = 5

[node name="attack_label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/Attack Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "30"
label_settings = ExtResource("3_gpnjr")
vertical_alignment = 1

[node name="Defense Container" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics"]
layout_mode = 2
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/Defense Container"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Defense"
texture = ExtResource("6_imqgq")
expand_mode = 5

[node name="defense_label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/Defense Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "25"
label_settings = ExtResource("3_gpnjr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed Container" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics"]
layout_mode = 2
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/Speed Container"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Speed"
texture = ExtResource("7_5t18f")
expand_mode = 5

[node name="spd_label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/Speed Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "25"
label_settings = ExtResource("3_gpnjr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackSpeed Container" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics"]
layout_mode = 2
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/AttackSpeed Container"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Attack Speed"
texture = ExtResource("8_08odm")
expand_mode = 5

[node name="attspd_label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/AttackSpeed Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "25"
label_settings = ExtResource("3_gpnjr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RangeIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 6
tooltip_text = "Melee"
texture = ExtResource("9_58t75")
expand_mode = 5

[node name="AOEIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 6
tooltip_text = "Single-target"
texture = ExtResource("10_mhg2c")
expand_mode = 5

[node name="DamageHealIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/statistics/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 6
tooltip_text = "Deals damage"
texture = ExtResource("11_cbdtt")
expand_mode = 5

[node name="Description" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Unit placeholder text"
label_settings = ExtResource("3_gpnjr")
horizontal_alignment = 1
autowrap_mode = 2
